      starting xmodmap. Fixes: #1019. Requires a re-release of X2Go Client for
      OS X.
    - src/x2goutils.{cpp,h}: add new function add_to_path () to add multiple
      entries to a PATH-like string if they do not exist in there yet.
    - src/onmainwindow.cpp: replace old code to modify the PATH value with the
      new add_to_path () function.

  [ Mike DePaulo ]
  * New upstream release (4.0.5.2):
    - Windows: add sshd logging when using the --debug flag.

  [ Martti Pitkänen ]
  * New upstream version (4.0.5.2):
    - res/i18n/x2goclient_fi.ts: update Finnish translation file.
    - res/i18n/x2goclient_fi.ts: update Finnish translation file.


  [ Sébastien Ducoulombier ]
  * New upstream version (4.0.5.2):
    - misc {src/,x2goclient.pro}: port to Qt5.

  [ Tor Perkins ]
  * New upstream release (4.0.5.2):
    - src/{onmainwindow,sshmasterconnection}.{cpp,h}: add support for ANSI
      X9.9 OTP tokens. Fixes: #1027. For this to work correctly, the challenge
      string needs to be displayed to the user.

 -- X2Go Release Manager <git-admin@x2go.org>  Thu, 24 Mar 2016 23:04:42 +0100

x2goclient (4.0.5.1-0x2go1) unstable; urgency=low

  [ Mihai Moldovan ]
  * New upstream release (4.0.5.1):
    - onmainwindow.cpp: include sshd PID file path option in quotes to support
      whitespaces within the var directory path on Windows. Add comment to
      revisit this later on non-Windows-platforms, too. Fixes: #916.
    - onmainwindow.cpp: do NOT reformat. Reverts most of the previous commit
      because it breaks code logic.
    - res/txt/packs: add adaptive method.
    - {macbuild.sh,x2goclient.pro}: pass MacPorts library and include path's
      to qmake. Due to the qt4-mac's changes, we do not automatically get
      these values automatically "appended" in a usable way anymore.
    - x2gosettings.cpp: let centralSettings () return false on Windows.
    - onmainwindow.cpp: be more precise in slotScDaemonError () regarding