@@ -884,17 +884,18 @@ bool SshMasterConnection::userChallengeAuth()
             bool need_to_display_auth_code_prompt = false;
             const std::size_t challenge_auth_code_prompts_size = (sizeof (challenge_auth_code_prompts_)/sizeof (*challenge_auth_code_prompts_));
 
-            if( pr.contains("challenge", Qt::CaseInsensitive) ) {
+            if (pr.contains ("challenge", Qt::CaseInsensitive)) {
               x2goDebug << "prompt contains 'challenge': " << pr << endl;
               has_challenge_auth_code_prompt = true;
               need_to_display_auth_code_prompt = true;
-            } else {
+            }
+            else {
               for (std::size_t i = 0; i < challenge_auth_code_prompts_size; ++i) {
-                  x2goDebug << "Checking against known prompt #" << i << ": " << challenge_auth_code_prompts_[i] << endl;
-                  if (pr.startsWith (challenge_auth_code_prompts_[i])) {
-                      has_challenge_auth_code_prompt = true;
-                      break;
-                  }
+                x2goDebug << "Checking against known prompt #" << i << ": " << challenge_auth_code_prompts_[i] << endl;
+                if (pr.startsWith (challenge_auth_code_prompts_[i])) {
+                    has_challenge_auth_code_prompt = true;
+                    break;
+                }
               }
             }
 
